adapt to changed @Input handling of Gradle 8
https://docs.gradle.org/8.0.1/userguide/validation_problems.html#incorrect_use_of_input_annotation